--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [ '15' ]
+        java: [ '16-ea']
       fail-fast: false
     name: ${{ matrix.os }} JDK ${{ matrix.java }}
     steps:
