--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,7 +30,7 @@ jobs:
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
         restore-keys: ${{ runner.os }}-gradle
     - name: Build with Gradle
-      run: ./gradlew -Dorg.gradle.java.home=${JAVA_HOME_11_X64} -Porg.gradle.java.installations.paths=${{ steps.setupjdk.outputs.path }} buildJPackages --scan --info --stacktrace
+      run: ./gradlew -Dorg.gradle.java.home="${JAVA_HOME_11_X64}" -Porg.gradle.java.installations.paths="${{ steps.setupjdk.outputs.path }}" buildJPackages --scan --info --stacktrace
     - name: Upload DMG as an artifact
       uses: actions/upload-artifact@v2
       with:
