GithubCI: Try to fix Windows build

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Git checkout
       uses: actions/checkout@v1
+    - name: Save default Java Home
+      run: echo "JDK_DEF=$(echo $JAVA_HOME)" >> $GITHUB_ENV
     - name: Set up JDK
       id: setupjdk
       uses: actions/setup-java@v1
@@ -30,7 +32,7 @@ jobs:
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
         restore-keys: ${{ runner.os }}-gradle
     - name: Build with Gradle
-      run: ./gradlew -Dorg.gradle.java.home="${JAVA_HOME_11_X64}" -Porg.gradle.java.installations.paths="${{ steps.setupjdk.outputs.path }}" buildJPackages --scan --info --stacktrace
+      run: ./gradlew -Dorg.gradle.java.home="${JDK_DEF}" -Porg.gradle.java.installations.paths="${{ steps.setupjdk.outputs.path }}" buildJPackages --scan --info --stacktrace
     - name: Upload DMG as an artifact
       uses: actions/upload-artifact@v2
       with:
