--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - name: Git checkout
       uses: actions/checkout@v1
-    - name: Setup JDK 15 (AdoptOpenJDK)
+    - name: Setup JDK 15 (AdoptOpenJDK) for Gradle
       uses: joschi/setup-jdk@v2
       with:
         java-version: 15
@@ -23,7 +23,7 @@ jobs:
       run: echo $JAVA_HOME
     - name: Save default Java Home
       run: echo "JDK_DEF=$(echo $JAVA_HOME)" >> $GITHUB_ENV
-    - name: Set up JDK (matrix)
+    - name: Set up JDK (matrix) for Gradle default toolchain
       id: setupjdk
       uses: actions/setup-java@v1
       with:
@@ -41,7 +41,7 @@ jobs:
     - name: Change Java Home for Windows Gradle
       run: echo "JAVA_HOME=$(echo $JDK_DEF)" >> $GITHUB_ENV
     - name: Build with Gradle
-      run: ./gradlew -Dorg.gradle.java.home="${JDK_DEF}" -Porg.gradle.java.installations.paths="${{ steps.setupjdk.outputs.path }}" buildJPackages --scan --info --stacktrace
+      run: ./gradlew -Dorg.gradle.java.home="${JAVA_HOME_15_x64}" -Porg.gradle.java.installations.paths="${{ steps.setupjdk.outputs.path }}" buildJPackages --scan --info --stacktrace
     - name: Upload DMG as an artifact
       uses: actions/upload-artifact@v2
       with:
