--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,6 +42,8 @@ jobs:
       run: echo "JAVA_HOME=$(echo $JAVA_HOME_15_x64)" >> $GITHUB_ENV
     - name: Build with Gradle
       run: ./gradlew -Dorg.gradle.java.home="${{ env.JAVA_HOME_15_x64 }}" -Porg.gradle.java.installations.paths="${{ steps.setupjdk.outputs.path }}" buildJPackages --scan --info --stacktrace
+      env:
+        JAVA_HOME: ${{ env.JAVA_HOME_15_x64 }}
     - name: Upload DMG as an artifact
       uses: actions/upload-artifact@v2
       with:
