--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [windows-latest]
         java: [ '16-ea']
       fail-fast: false
     name: ${{ matrix.os }} JDK ${{ matrix.java }}
@@ -41,7 +41,7 @@ jobs:
     - name: Change Java Home for Windows Gradle
       run: echo "JAVA_HOME=$(echo $JAVA_HOME_15_x64)" >> $GITHUB_ENV
     - name: Build with Gradle
-      run: ./gradlew -Dorg.gradle.java.home="${{ env.JAVA_HOME_15_x64 }}" -Porg.gradle.java.installations.paths="${{ steps.setupjdk.outputs.path }}" buildJPackages --scan --info --stacktrace
+      run: ./gradlew '-Porg.gradle.java.installations.paths=C:\hostedtoolcache\windows\jdk\16.0.0-ea\x64' buildJPackages --scan --info --stacktrace
       env:
         JAVA_HOME: ${{ env.JAVA_HOME_15_x64 }}
     - name: Upload DMG as an artifact
